nuova pagina fertilizzazione

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,12 @@
     <nav class="sidebar-nav">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/tables']"><i class="icon-speedometer"></i> Tabelle </a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/test']"><i class="icon-speedometer"></i> Test Acqua </a>
         </li>
         <li class="divider"></li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/ferti']"><i class="icon-speedometer"></i> Fertilizzazione </a>
+        </li>
       </ul>
     </nav>
   </div>
