--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -4,3 +4,8 @@
          style="display: block; width: 100%;">
   </div>
 </div>
+
+<h1>Utenti registrati:</h1>
+<ul>
+  <li *ngFor="let user of users">{{ user.username }}</li>
+</ul>
