--- a/src/app/components/register.component.html
+++ b/src/app/components/register.component.html
@@ -6,41 +6,39 @@
           <div class="card-body p-4">
             <h1>Register</h1>
             <p class="text-muted">Create your account</p>
-            <div class="input-group mb-3">
-              <span class="input-group-addon"><i class="icon-user"></i></span>
-              <input type="text" class="form-control" placeholder="Username">
-            </div>
-
-            <div class="input-group mb-3">
-              <span class="input-group-addon">@</span>
-              <input type="text" class="form-control" placeholder="Email">
-            </div>
-
-            <div class="input-group mb-3">
-              <span class="input-group-addon"><i class="icon-lock"></i></span>
-              <input type="password" class="form-control" placeholder="Password">
-            </div>
-
-            <div class="input-group mb-4">
-              <span class="input-group-addon"><i class="icon-lock"></i></span>
-              <input type="password" class="form-control" placeholder="Repeat password">
-            </div>
-
-            <button type="button" class="btn btn-block btn-success">Create Account</button>
-          </div>
-          <div class="card-footer p-4">
-            <div class="row">
-              <div class="col-6">
-                <button class="btn btn-block btn-facebook" type="button"><span>facebook</span></button>
+            <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+              <div class="input-group mb-3">
+                <span class="input-group-addon"><i class="icon-user"></i></span>
+                <input name="username" type="text" class="form-control" placeholder="Username" required ngModel #username="ngModel">
               </div>
-              <div class="col-6">
-                <button class="btn btn-block btn-twitter" type="button"><span>twitter</span></button>
+
+              <div class="input-group mb-3">
+                <span class="input-group-addon">@</span>
+                <input name="email" type="email" class="form-control" placeholder="Email" required ngModel #email="ngModel">
               </div>
-            </div>
+
+              <div class="input-group mb-3">
+                <span class="input-group-addon"><i class="icon-lock"></i></span>
+                <input name="password1" type="password" class="form-control" placeholder="Password" required ngModel #password1="ngModel">
+              </div>
+
+              <div class="input-group mb-4">
+                <span class="input-group-addon"><i class="icon-lock"></i></span>
+                <input name="password2" type="password" class="form-control" placeholder="Repeat password" required ngModel #password2="ngModel">
+              </div>
+
+              <button type="submit" class="btn btn-block btn-success" >Crea nuovo utente</button>
+            </form>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
+<h1>Utenti registrati:</h1>
+<ul>
+  <li *ngFor="let user of userList">{{ user.username }} - {{ user.password }} - {{ user.email }}</li>
+</ul>
 
