--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="animated fadeIn">
-    <img src="http://www.theaquariumguide.com/wp-content/uploads/2015/12/Taiwanese-Aquascaping-Style.jpg"
+    <img src="assets/img/aqua01.jpg"
          style="display: block; width: 100%;">
   </div>
 </div>
