--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,58 @@
 <header class="app-header navbar">
-  <button class="navbar-toggler d-lg-none" type="button" appMobileSidebarToggler>&#9776;</button>
-  <!--<a class="navbar-brand" href="#"></a>-->
-  <button class="navbar-toggler d-md-down-none" type="button" appSidebarToggler>&#9776;</button>
-  <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">
-    <h1 class="nav-item">acquaMI</h1>
-  </a>
-  <ul class="nav navbar-nav d-md-down-none">
-    <li class="nav-item px-3">
-      <a class="nav-link" routerLinkActive="active" [routerLink]="['/login']">LogIn</a>
-    </li>
-  </ul>
-</header>
-
-<div class="app-body">
-  <div class="sidebar">
-    <nav class="sidebar-nav">
-      <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/test']"><i class="fa fa-eyedropper"></i> Test Acqua </a>
-        </li>
-        <li class="divider"></li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/ferti']"><i class="fa fa-bug"></i> Fertilizzazione </a>
-        </li>
-      </ul>
-    </nav>
+    <button class="navbar-toggler d-lg-none" type="button" appMobileSidebarToggler>&#9776;</button>
+    <button class="navbar-toggler d-md-down-none" type="button" appSidebarToggler>&#9776;</button>
+    <a href="#" class="nav-link"><img src="assets/img/alga.png" style="width:42px;height:42px;border:0"></a>
+    <ul class="nav navbar-nav ml-auto">
+      <li class="nav-item dropdown" dropdown >
+        <a href class="nav-link dropdown-toggle" dropdownToggle (click)="false">
+          <span class="fa fa-user"></span>
+          <span class="d-md-down-none">admin</span>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
+          <div class="dropdown-header text-center"><strong>Account</strong></div>
+          <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>
+          <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
+        </div>
+      </li>
+    </ul>
+  </header>
+  
+  <div class="app-body">
+    <div class="sidebar">
+      <nav class="sidebar-nav">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/test']"><i class="fa fa-eyedropper"></i> Test Acqua </a>
+          </li>
+          <li class="divider"></li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/ferti']"><i class="fa fa-leaf"></i> Fertilizzazione </a>
+          </li>
+          <li class="divider"></li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/manutenzione']"><i class="fa fa-wrench"></i> Manutenzione </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  
+    <!-- Main content -->
+    <main class="main"> 
+      <div class="container-fluid">
+        <router-outlet></router-outlet>
+      </div><!-- /.conainer-fluid -->
+    </main>
+  
   </div>
-  <!-- Main content -->
-  <main class="main">
-    <router-outlet></router-outlet>
-  </main>
-</div>
 
-<footer class="app-footer">
-  <p>
-    <span>&copy; 2018 acquaMI</span>
-    <span class="float-right">Created by Irene Nicolini</span>
-  </p>
-</footer>
+    <footer class="app-footer">
+      <p>
+        <span>&copy; 2018 acquaMI</span>
+        <span class="float-right">Created by Irene Nicolini</span>
+      </p>
+    </footer>
 
+    
+  
 
 
