--- a/src/app/components/test.component.html
+++ b/src/app/components/test.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-          <i class="fa fa-align-justify"></i> Fertilizzazioni
+          <i class="fa fa-align-justify"></i> Test Acqua
               <button class="btn btn-warning align-right" (click)="createNewEvent()">New</button>
         </div>
         <div class="card-body">
@@ -22,36 +22,78 @@
                 {{row.dataMisura}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="K2So4">
+
+            <ngx-datatable-column name="Kh min">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.k2so4}}
+                {{row.test.khmin}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="K2No3">
+            <ngx-datatable-column name="Kh max">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.k2no3}}
+                {{row.test.khmax}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Magnesio">
+            <ngx-datatable-column name="Gh min">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.magnesio}}
+                {{row.test.ghmin}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Generico">
+            <ngx-datatable-column name="Gh max">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.generico}}
+                {{row.test.ghmax}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Ferro">
+            <ngx-datatable-column name="Ph min">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.ferro}}
+                {{row.test.phmin}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Fosfati">
+            <ngx-datatable-column name="Ph max">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.fosfati}}
+                {{row.test.phmax}}
               </ng-template>
             </ngx-datatable-column>
+            <ngx-datatable-column name="NO3 min">
+              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                {{row.test.no3min}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="NO3 max">
+              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                {{row.test.no3max}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="NO2 min">
+              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                {{row.test.no2min}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="NO2 max">
+              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                {{row.test.no2max}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Ferro min">
+              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                {{row.test.femin}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Ferro max">
+              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                {{row.test.femax}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Fosfati min">
+              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                {{row.test.fomin}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Fosfati max">
+              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                {{row.test.fomax}}
+              </ng-template>
+            </ngx-datatable-column>
+           
             <ngx-datatable-column name="Annotazioni">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
                 {{row.note}}
