--- a/src/app/components/fertilization.component.html
+++ b/src/app/components/fertilization.component.html
@@ -3,8 +3,14 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-          <i class="fa fa-align-justify"></i> Fertilizzazioni
-              <button class="btn btn-warning align-right" (click)="createNewEvent()">New</button>
+          <div class="row">
+            <div class="col-sm-5">
+              <i class="fa fa-align-justify"></i> Fertilizzazioni
+              </div>
+              <div class="col-sm-7 d-none d-md-block">
+              <button class="btn btn-warning float-right" (click)="createNewEvent()">New</button>
+            </div>
+          </div>
         </div>
         <div class="card-body">
           <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
@@ -62,12 +68,19 @@
       </div>
     </div>
   </div>
-  <div *ngIf="selected" class="row">
+  <div *ngIf="selectedEvent" class="row">
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-          <i class="fa fa-align-justify"></i> Selezione
-        </div>
+          <div class="row">
+              <div class="col-sm-5">
+                <i class="fa fa-align-justify"></i> Selezione
+                </div>
+                <div class="col-sm-7 d-none d-md-block">
+                <button class="btn btn-danger float-right" (click)="back()">X</button>
+              </div>
+            </div>
+          </div>
         <div class="card-body">
           <event-detail
           [event]="selectedEvent"
