--- a/src/app/components/test.component.html
+++ b/src/app/components/test.component.html
@@ -104,7 +104,7 @@
       </div>
     </div>
   </div>
-  <div *ngIf="selected" class="row">
+  <div *ngIf="selectedEvent" class="row">
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
