date dinamiche home page

--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -12,7 +12,7 @@
     <div class="card">
       <div class="card-block p-1 clearfix">
         <i class="fa fa-eyedropper bg-info p-1 font-2xl mr-1 float-left"></i>
-        <div class="h5 text-info mb-0 mt-h">01/03/2018</div>
+        <div class="h5 text-info mb-0 mt-h">{{dataTest  | date }}</div>
         <div class="text-muted text-uppercase font-weight-bold font-xs">Ultimo Test</div>
       </div>
       <div class="card-footer p-x-1 py-h">
@@ -27,7 +27,7 @@
     <div class="card">
       <div class="card-block p-1 clearfix">
         <i class="fa fa-leaf bg-info p-1 font-2xl mr-1 float-left"></i>
-        <div class="h5 text-info mb-0 mt-h">01/03/2018</div>
+        <div class="h5 text-info mb-0 mt-h">{{dataTest  | date }}</div>
         <div class="text-muted text-uppercase font-weight-bold font-xs">Ultima Fertilizzazione</div>
       </div>
       <div class="card-footer p-x-1 py-h">
@@ -42,7 +42,7 @@
     <div class="card">
       <div class="card-block p-1 clearfix">
         <i class="fa fa-wrench bg-info p-1 font-2xl mr-1 float-left"></i>
-        <div class="h5 text-info mb-0 mt-h">12/03/2018</div>
+        <div class="h5 text-info mb-0 mt-h">{{dataTest  | date }}</div>
         <div class="text-muted text-uppercase font-weight-bold font-xs">Ultima Manutenzione</div>
       </div>
       <div class="card-footer p-x-1 py-h">
