--- a/src/app/components/event-detail.component.html
+++ b/src/app/components/event-detail.component.html
@@ -4,37 +4,167 @@
     <h2 *ngIf="!event._id">Nuova registrazione</h2>
   </div>
 </div>
-<div *ngIf="event" class="row">
-  <form class="col-md-12">
-    <div class="form-group">
-      <label for="event-tipoEvento">tipoEvento</label>
-      <input class="form-control" name="event-tipoEvento" type="text" [(ngModel)]="event.tipoEvento" placeholder="tipoEvento" readonly/>
+<form *ngIf="event">
+  <div class="form-group" id="test">
+    <h3>Misurazioni Test</h3>
+    <div class="row">
+      <div class="form-group col-sm-4 border border-info">
+          <legend>Ph</legend>
+        <div class="row">
+          <div class="form-group col-sm-12">
+            <label for="ccph_min">Min</label>
+            <select class="form-control" id="ccph_min">
+              <option>5</option>
+              <option>5,5</option>
+              <option>6</option>
+              <option>6,5</option>
+              <option>7</option>
+              <option>7,5</option>
+              <option>8</option>
+              <option>8,5</option>
+            </select>
+          </div>
+          <div class="form-group col-sm-12">
+            <label for="ccph_max">Max</label>
+            <select class="form-control" id="ccph_max">
+              <option>5</option>
+              <option>5,5</option>
+              <option>6</option>
+              <option>6,5</option>
+              <option>7</option>
+              <option>7,5</option>
+              <option>8</option>
+              <option>8,5</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="form-group col-sm-4 border border-info">
+          <legend>Kh</legend>
+        <div class="row">
+          <div class="form-group col-sm-12">
+            <label for="cckh_min">Min</label>
+            <select class="form-control" id="cckh_min">
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+              <option>10</option>
+              <option>11</option>
+              <option>12</option>
+              <option>13</option>
+              <option>14</option>
+            </select>
+          </div>
+          <div class="form-group col-sm-12">
+            <label for="cckh_max">Max</label>
+            <select class="form-control" id="cckh_max">
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+              <option>10</option>
+              <option>11</option>
+              <option>12</option>
+              <option>13</option>
+              <option>14</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="form-group col-sm-4 border border-info">
+          <legend>Gh</legend>
+        <div class="row">
+          <div class="form-group col-sm-12">
+            <label for="ccgh_min">Min</label>
+            <select class="form-control" id="ccgh_min">
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+              <option>10</option>
+              <option>11</option>
+              <option>12</option>
+              <option>13</option>
+              <option>14</option>
+            </select>
+          </div>
+          <div class="form-group col-sm-12">
+            <label for="ccgh_max">Max</label>
+            <select class="form-control" id="ccgh_max">
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+              <option>10</option>
+              <option>11</option>
+              <option>12</option>
+              <option>13</option>
+              <option>14</option>
+            </select>
+          </div>
+        </div>
+      </div>
     </div>
-    <div *ngIf="event.isFertilizzazione()" class="form-group">
-      <p>Fertilizzante utilizzato</p>
-      <label for="event-ferti-k2so4">Solfato di potassio</label>
-      <input class="form-control" name="event-ferti-k2so4" type="number" [(ngModel)]="event.ferti.k2so4" placeholder="K2SO4"/>
-      <label for="event-ferti-magnesio">Magnesio</label>
-      <input class="form-control" name="event-ferti-magnesio" type="number" [(ngModel)]="event.ferti.magnesio" placeholder="Magnesio"/>
-      <label for="event-ferti-generico">Generico</label>
-      <input class="form-control" name="event-ferti-generico" type="number" [(ngModel)]="event.ferti.generico" placeholder="Generico"/>
-      <label for="event-ferti-k2no3">Nitrato di potassio</label>
-      <input class="form-control" name="event-ferti-k2no3" type="number" [(ngModel)]="event.ferti.k2no3" placeholder="K2NO3"/>
-      <label for="event-ferti-ferro">Ferro</label>
-      <input class="form-control" name="event-ferti-ferro" type="number" [(ngModel)]="event.ferti.ferro" placeholder="Ferro"/>
-      <label for="event-ferti-fosfati">Fosfati</label>
-      <input class="form-control" name="event-ferti-fosfati" type="number" [(ngModel)]="event.ferti.fosfati" placeholder="Fosfati"/> 
-    </div>
-    <div class="form-group">
-      <label for="event-dataMisura">dataMisura</label>
-      <input class="form-control" name="event-dataMisura" type="date" [(ngModel)]="event.dataMisura" placeholder="dataMisura"/>
-    </div>
-    <div class="form-group">
-      <label for="event-note">note</label>
-      <input class="form-control" name="event-note" type="text" [(ngModel)]="event.note" placeholder="note"/>
-    </div>
-    <button class="btn btn-primary" *ngIf="!event._id" (click)="createEvent(event)">Create</button>
-    <button class="btn btn-info" *ngIf="event._id" (click)="updateEvent(event)">Update</button>
-    <button class="btn btn-danger" *ngIf="event._id" (click)="deleteEvent(event._id)">Delete</button>
-  </form>
-</div>
+  </div>
+
+  <div class="form-group" id="ferti">
+    <p>Fertilizzante utilizzato</p>
+    <label for="event-ferti-k2so4">Solfato di potassio</label>
+    <input class="form-control" name="event-ferti-k2so4" type="number" [(ngModel)]="event.ferti.k2so4" placeholder="K2SO4" />
+    <label for="event-ferti-magnesio">Magnesio</label>
+    <input class="form-control" name="event-ferti-magnesio" type="number" [(ngModel)]="event.ferti.magnesio" placeholder="Magnesio"
+    />
+    <label for="event-ferti-generico">Generico</label>
+    <input class="form-control" name="event-ferti-generico" type="number" [(ngModel)]="event.ferti.generico" placeholder="Generico"
+    />
+    <label for="event-ferti-k2no3">Nitrato di potassio</label>
+    <input class="form-control" name="event-ferti-k2no3" type="number" [(ngModel)]="event.ferti.k2no3" placeholder="K2NO3" />
+    <label for="event-ferti-ferro">Ferro</label>
+    <input class="form-control" name="event-ferti-ferro" type="number" [(ngModel)]="event.ferti.ferro" placeholder="Ferro" />
+    <label for="event-ferti-fosfati">Fosfati</label>
+    <input class="form-control" name="event-ferti-fosfati" type="number" [(ngModel)]="event.ferti.fosfati" placeholder="Fosfati"
+    />
+  </div>
+  <div class="form-group" id="manu">
+    <p>Manutenzioni effettuate</p>
+    <label for="event-ferti-k2so4">Solfato di potassio</label>
+    <input class="form-control" name="event-ferti-k2so4" type="number" [(ngModel)]="event.ferti.k2so4" placeholder="K2SO4" />
+    <label for="event-ferti-magnesio">Magnesio</label>
+    <input class="form-control" name="event-ferti-magnesio" type="number" [(ngModel)]="event.ferti.magnesio" placeholder="Magnesio"
+    />
+    <label for="event-ferti-generico">Generico</label>
+    <input class="form-control" name="event-ferti-generico" type="number" [(ngModel)]="event.ferti.generico" placeholder="Generico"
+    />
+    <label for="event-ferti-k2no3">Nitrato di potassio</label>
+    <input class="form-control" name="event-ferti-k2no3" type="number" [(ngModel)]="event.ferti.k2no3" placeholder="K2NO3" />
+    <label for="event-ferti-ferro">Ferro</label>
+    <input class="form-control" name="event-ferti-ferro" type="number" [(ngModel)]="event.ferti.ferro" placeholder="Ferro" />
+    <label for="event-ferti-fosfati">Fosfati</label>
+    <input class="form-control" name="event-ferti-fosfati" type="number" [(ngModel)]="event.ferti.fosfati" placeholder="Fosfati"
+    />
+  </div>
+  <div class="form-group">
+    <label for="event-dataMisura">dataMisura</label>
+    <input class="form-control" name="event-dataMisura" type="date" [(ngModel)]="event.dataMisura" placeholder="dataMisura" />
+  </div>
+  <div class="form-group">
+    <label for="event-note">note</label>
+    <input class="form-control" name="event-note" type="text" [(ngModel)]="event.note" placeholder="note" />
+  </div>
+  <button class="btn btn-primary" *ngIf="!event._id" (click)="createEvent(event)">Create</button>
+  <button class="btn btn-info" *ngIf="event._id" (click)="updateEvent(event)">Update</button>
+  <button class="btn btn-danger" *ngIf="event._id" (click)="deleteEvent(event._id)">Delete</button>
+</form>
