--- a/src/app/components/maintenance.component.html
+++ b/src/app/components/maintenance.component.html
@@ -2,10 +2,16 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="card">
-          <div class="card-header">
-            <i class="fa fa-align-justify"></i> Manutenzione
-                <button class="btn btn-warning align-right" (click)="createNewEvent()">New</button>
-          </div>
+            <div class="card-header">
+              <div class="row">
+                <div class="col-sm-5">
+                  <i class="fa fa-align-justify"></i> Manutenzioni
+                  </div>
+                  <div class="col-sm-7 d-none d-md-block">
+                  <button class="btn btn-warning float-right" (click)="createNewEvent()">New</button>
+                </div>
+              </div>
+            </div>
           <div class="card-body">
             <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
               [rows]="events"
@@ -65,9 +71,6 @@
     <div *ngIf="selectedEvent" class="row">
       <div class="col-lg-12">
         <div class="card">
-          <div class="card-header">
-            <i class="fa fa-align-justify"></i> Selezione
-          </div>
           <div class="card-body">
             <event-detail
             [event]="selectedEvent"
