--- a/src/app/components/test.component.html
+++ b/src/app/components/test.component.html
@@ -3,20 +3,19 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-          <i class="fa fa-align-justify"></i> Test Acqua
-              <button class="btn btn-warning align-right" (click)="createNewEvent()">New</button>
+          <div class="row">
+            <div class="col-sm-5">
+              <i class="fa fa-align-justify"></i> Test
+            </div>
+            <div class="col-sm-7 d-none d-md-block">
+              <button class="btn btn-warning float-right" (click)="createNewEvent()">New</button>
+            </div>
+          </div>
         </div>
         <div class="card-body">
           <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
-            [rows]="events"
-            [columnMode]="'force'"
-            [headerHeight]="50"
-            [footerHeight]="0"
-            [rowHeight]="'auto'"
-            [selected]="selected"
-            [selectionType]="'single'"
-            (activate)="onActivate($event)"
-            (select)='onSelect($event)'>
+            [rows]="events" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [selected]="selected"
+            [selectionType]="'single'" (activate)="onActivate($event)" (select)='onSelect($event)'>
             <ngx-datatable-column name="Data Misura">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
                 {{row.dataMisura}}
@@ -93,7 +92,7 @@
                 {{row.test.fomax}}
               </ng-template>
             </ngx-datatable-column>
-           
+
             <ngx-datatable-column name="Annotazioni">
               <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
                 {{row.note}}
@@ -107,21 +106,11 @@
   <div *ngIf="selectedEvent" class="row">
     <div class="col-lg-12">
       <div class="card">
-        <div class="card-header">
-          <i class="fa fa-align-justify"></i> Selezione
-        </div>
         <div class="card-body">
-          <event-detail
-          [event]="selectedEvent"
-          [createHandler]="addEvent"
-          [updateHandler]="updateEvent"
-          [deleteHandler]="deleteEvent">
-        </event-detail>
-      </div>
+          <event-detail [event]="selectedEvent" [createHandler]="addEvent" [updateHandler]="updateEvent" [deleteHandler]="deleteEvent">
+          </event-detail>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
-
-
