--- a/src/app/components/fertilization.component.html
+++ b/src/app/components/fertilization.component.html
@@ -1,5 +1,5 @@
 <div class="animated fadeIn">
-  <div class="row">
+  <div *ngIf="!selectedEvent" class="row">
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
