--- a/src/app/components/event-detail.component.html
+++ b/src/app/components/event-detail.component.html
@@ -461,6 +461,7 @@
     </div>
   </div>
 
+  <button class="btn btn-primary" routerLinkActive="active" [routerLink]="['/home']">Indietro</button>
   <button class="btn btn-primary" *ngIf="!event._id" (click)="createEvent(event)">Create</button>
   <button class="btn btn-info" *ngIf="event._id" (click)="updateEvent(event)">Update</button>
   <button class="btn btn-danger" *ngIf="event._id" (click)="deleteEvent(event._id)">Delete</button>
