--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -1,7 +1,7 @@
-<button class="btn btn-danger btn-fab fixed-bottom-right" title="Add" (click)="createNewEvent()">
-  <i class="fa fa-add"></i>
-</button>
 <div class="container-fluid" *ngIf="!selectedEvent">
+  <button class="btn btn-danger fixed-bottom-right" title="Add" (click)="createNewEvent()">
+    <i class="fa fa-plus"></i>
+  </button>
   <div class="row">
     <div class="col-md-12 col-sm-12">
       <div class="card">
