--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,7 @@
 
 <footer class="footer">
   <div class="container">
-    <spanclass="text-muted">&copy; 2018 acquaMI</span>
-      <span class="text-muted">Created by Irene Nicolini</span>
+    <span class="text-muted text-left">&copy; 2018 acquaMI</span>
+    <span class="text-muted text-right">Created by Irene Nicolini</span>
   </div>
 </footer>
