--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" *ngIf="!selectedEvent">
-  <button class="btn btn-danger fixed-bottom-right" title="Add" (click)="createNewEvent()">
+  <button class="btn btn-danger bmd-btn-fab fixed-bottom-right" title="Add" (click)="createNewEvent()">
     <i class="fa fa-plus"></i>
   </button>
   <div class="row">
