--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-danger btn-fab fixed-bottom-right" title="Add" (click)="createNewEvent()">
+<button *ngIf="!selectedEvent" class="btn btn-danger btn-fab fixed-bottom-right" title="Add" (click)="createNewEvent()">
   <i class="fa fa-plus"></i>
 </button>
 <div class="jumbotron py-3" *ngIf="!selectedEvent">
@@ -35,11 +35,11 @@
     </div>
   </div>
 </div>
-<div class="container mb-5" *ngIf="selectedEvent">
+<div class="container my-4" *ngIf="selectedEvent">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col">
       <div class="card">
-        <div class="card-body">
+        <div class="card-body  text-center">
           <app-event-detail [event]="selectedEvent" [createHandler]="addEvent" [updateHandler]="updateEvent" [deleteHandler]="deleteEvent">
           </app-event-detail>
         </div>
